blocks request to show parentchain committed status
